Vercel kökenleri için CORS izinleri genişletildi.
Spring Security CORS’ta localhost yanında https://*.vercel.app pattern’i ve isteğe bağlı CORS_ALLOWED_ORIGINS env desteği eklendi; statik dosya CORS eşlemesi güncellendi.

Made-with: Cursor